tests/neg/i8752.scala
import scala.collection.IterableOps

trait Arround1[C <:[X]=>>IterableOps[X,C,C[X]] ] // error // error
