tests/neg/i8752.check
-- [E053] Type Error: tests/neg/i8752.scala:3:41 -----------------------------------------------------------------------
3 |trait Arround1[C <:[X]=>>IterableOps[X,C,C[X]] ] // error // error
  |                                         ^^^^
  |                                         C does not take type parameters
  |                                         (Note that F-bounds of type parameters may not be type lambdas)
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i8752.scala:3:39 -----------------------------------------------------------------------------------
3 |trait Arround1[C <:[X]=>>IterableOps[X,C,C[X]] ] // error // error
  |                                       ^
  |                                       Type argument C does not have the same kind as its bound [_$$1]
